--- a/templates/admin/ad/edit.html.twig
+++ b/templates/admin/ad/edit.html.twig
@@ -8,7 +8,7 @@
 
 {{ form_start(form) }}
 
-<div class="container">
+<div class="container-fluid">
     <h1 class="my-5">Annonce n° ({{ ad.id }}) : "{{ ad.title }}" de {{ ad.author.fullName | upper }}
         - utilisateur ({{ ad.author.id }})</h1>
     <div class="row">
