--- a/templates/admin/partials/header.html.twig
+++ b/templates/admin/partials/header.html.twig
@@ -21,19 +21,19 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="{{ path('admin_bookings_index') }}">
                     <i class="fas fa-folder"></i>
                     Réservations
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="{{ path('admin_ads_index') }}">
                     <i class="fas fa-comments"></i>
                     Commentaires
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="{{ path('admin_ads_index') }}">
                     <i class="fas fa-users"></i>
                     Utilisateurs
                 </a>
