--- a/templates/admin/partials/header.html.twig
+++ b/templates/admin/partials/header.html.twig
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarColor03">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="{{ path('admin_dashboard_index') }}">
                     <i class="fas fa-chart-line"></i>
                     Dash Board
                 </a>
@@ -27,13 +27,13 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ path('admin_ads_index') }}">
+                <a class="nav-link" href="{{ path('admin_comments_index') }}">
                     <i class="fas fa-comments"></i>
                     Commentaires
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ path('admin_ads_index') }}">
+                <a class="nav-link" href="{{ path('admin_users_index') }}">
                     <i class="fas fa-users"></i>
                     Utilisateurs
                 </a>
