--- a/templates/admin/ad/index.html.twig
+++ b/templates/admin/ad/index.html.twig
@@ -5,6 +5,21 @@
 {% block body %}
     <div class="container-fluid">
         <h1 class="my-5"> Gestion des annonces</h1>
+        <div class="d-flex justify-content-center">
+            <ul class="pagination">
+                <li class="page-item {% if page == 1 %}disabled{% endif %}">
+                    <a class="page-link" href="{{ path('admin_ads_index', {'page': page - 1}) }}">&laquo;</a>
+                </li>
+                {% for i in 1..pages %}
+                <li class="page-item {% if page == i %}active{% endif %}">
+                    <a class="page-link" href="{{ path('admin_ads_index', {'page': i}) }}">{{ i }}</a>
+                </li>
+                {% endfor %}
+                <li class="page-item {% if page == pages %}disabled{% endif %}">
+                    <a class="page-link" href="{{ path('admin_ads_index', {'page': page + 1}) }} ">&raquo;</a>
+                </li>
+            </ul>
+        </div>
         <table class="table table-hover">
             <thead>
                 <tr>
@@ -38,5 +53,20 @@
                 {% endfor %}
             </tbody>
         </table>
+        <div class="d-flex justify-content-center">
+            <ul class="pagination">
+                <li class="page-item {% if page == 1 %}disabled{% endif %}">
+                    <a class="page-link" href="{{ path('admin_ads_index', {'page': page - 1}) }}">&laquo;</a>
+                </li>
+                {% for i in 1..pages %}
+                <li class="page-item {% if page == i %}active{% endif %}">
+                    <a class="page-link" href="{{ path('admin_ads_index', {'page': i}) }}">{{ i }}</a>
+                </li>
+                {% endfor %}
+                <li class="page-item {% if page == pages %}disabled{% endif %}">
+                    <a class="page-link" href="{{ path('admin_ads_index', {'page': page + 1}) }} ">&raquo;</a>
+                </li>
+            </ul>
+        </div>
     </div>
 {% endblock %}
